# Object-oriented-Input-System--OIS-

./: CMakeLists.txt
includes/: OISMultiTouch.h  OISPrereqs.h
includes/android/: AndroidInputManager.h  OISLog.h
includes/linux/: LinuxPrereqs.h
src/: OISInputManager.cpp
src/android/: AndroidInputManager.cpp
